--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -24,6 +24,11 @@
 		<div class="contact-form__item">
 			<input type="submit" value="{{ site.data.settings.contact_settings.send_button_text }}" class="button button--large">
 		</div>
+               
+		<div class="contact-form__item">
+                        <input class="contact-form__checkbox" type="checkbox">
+                        <label class="contact-form__label">Yes, subscribe me to your newsletter (2 or 3 emails per year).</label>
+		</div>
 
 	</form>
 
