add checkbox field name (for formspree)

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -26,7 +26,7 @@
 		</div>
                
 		<div class="contact-form__item">
-                        <input class="contact-form__checkbox" type="checkbox">
+                        <input class="contact-form__checkbox" type="checkbox" name="newsletter">
                         <label class="contact-form__label">Yes, subscribe me to your newsletter (2 or 3 emails per year).</label>
 		</div>
 
