--- a/_sass/_includes/_header.scss
+++ b/_sass/_includes/_header.scss
@@ -37,6 +37,7 @@
 }
 
 .header__title {
+        font-family: $logo-font;
 	font-size: $sitetitle-small;
 	font-weight: $sitetitle-weight;
 	letter-spacing: $sitetitle-spacing;
