--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -22,8 +22,7 @@
 		<input type="text" name="_gotcha" style="display: none;" class="contact-form__gotcha" val="">
                
 		<div class="contact-form__item">
-                        <input class="contact-form__checkbox" type="checkbox" name="newsletter">
-                        <label class="contact-form__label">Yes, subscribe me to your newsletter (2 or 3 emails per year).</label>
+                        <label class="contact-form__label"><input class="contact-form__checkbox" type="checkbox" name="newsletter" /> Yes, subscribe me to your newsletter (2 or 3 emails per year).</label>
 		</div>
 
 		<div class="contact-form__item">
