--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,8 @@
 			<p class="footer__text">{{ site.data.settings.footer_settings.footer_tagline }}</p>
 
 			<div class="footer__copyright">
-				<span>© {{ 'now' | date: "%Y" }} {{ site.data.settings.basic_settings.site_title | title }}</span>
+				<span>© {{ 'now' | date: "%Y" }} Franck Ratier</span>
+				<!-- <span>© {{ 'now' | date: "%Y" }} {{ site.data.settings.basic_settings.site_title }}</span> -->
 				<!-- <a href="" target="_blank"></a> -->
 			</div>
 
