--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
 
 			<div class="footer__copyright">
 				<!-- <span>© {{ 'now' | date: "%Y" }} Franck Ratier</span> -->
-				<span>© {{ 'now' | date: "%Y" }} {{ site.data.settings.basic_settings.site_title }}</span>
+				<span>© {{ 'now' | date: "%Y" }} {{ site.data.settings.basic_settings.company_name }}</span>
 				<!-- <a href="" target="_blank"></a> -->
 			</div>
 
